added mysql root password <vijay>

--- a/properties/qa/deploy.properties
+++ b/properties/qa/deploy.properties
@@ -13,7 +13,7 @@ mysql.server=127.0.0.1
 mysql.port=3306
 mysql.db.name=motechquartz
 mysql.user=root
-mysql.password=
+mysql.password=password
 mysql.driver=com.mysql.jdbc.Driver
 mysql.openmrs.db.name=openmrs_test
 mysql.openmrs.user=openmrs
