--- a/properties/prod/deploy.properties
+++ b/properties/prod/deploy.properties
@@ -6,15 +6,19 @@ downloaded.war=${download.dir}/ghana-national.war
 
 couchdb.server=127.0.0.1
 couchdb.port=5984
-couchdb.mtn.web.db=ghana-national
+couchdb.national.db=ghana-national
 couchdb.seed.main.class=org.ghana.national.tools.seed.SetupSeedData
 
 mysql.server=127.0.0.1
 mysql.port=3306
 mysql.db.name=motechquartz
 mysql.user=root
-mysql.password=
+mysql.password=password
 mysql.driver=com.mysql.jdbc.Driver
+mysql.openmrs.db.name=openmrs_test
+mysql.openmrs.user=openmrs
+mysql.openmrs.password=password
+
 
 tomcat.home=/home/motech/apache-tomcat-7.0.16
 tomcat.port=8080
