--- a/properties/qa/deploy.properties
+++ b/properties/qa/deploy.properties
@@ -7,7 +7,7 @@ downloaded.war=${download.dir}/ghana-national.war
 couchdb.server=127.0.0.1
 couchdb.port=5984
 couchdb.national.db=ghana-national
-couchdb.seed.main.class=org.ghana.national.tools.seed.SetupSeedData
+couchdb.seed.main.class=org.motechproject.ghana.national.tools.seed.SetupSeedData
 
 mysql.server=127.0.0.1
 mysql.port=3306
