--- a/properties/qa/deploy.properties
+++ b/properties/qa/deploy.properties
@@ -1,15 +1,15 @@
-app.name=ghana-national
+app.name=ghana-national-web
 app.context.root=/${app.name}
 
 download.dir=${basedir}/artifacts
-downloaded.war=${download.dir}/ghana-national.war
+downloaded.war=${download.dir}/ghana-national-web.war
 
-couchdb.server=127.0.0.1
+couchdb.server=localhost
 couchdb.port=5984
 couchdb.national.db=ghana-national
 couchdb.seed.main.class=org.motechproject.ghana.national.tools.seed.SetupSeedData
 
-mysql.server=127.0.0.1
+mysql.server=localhost
 mysql.port=3306
 mysql.db.name=motechquartz
 mysql.user=root
@@ -20,14 +20,19 @@ mysql.openmrs.user=openmrs
 mysql.openmrs.password=password
 
 
-tomcat.home=/home/motech/apache-tomcat-7.0.16
+tomcat.home=/root/apache-tomcat-7.0.22
 tomcat.port=8080
 tomcat.url=http://localhost:${tomcat.port}
+
+tomcat.user=tomcat
+tomcat.password=tomcat
+tomcat.qa.host=10.10.13.52
+tomcat.qa.manager.url=http://${tomcat.qa.host}:${tomcat.port}/manager/text
 
 hudson.server=10.10.13.42
 hudson.port=8080
 hudson.job.name=Ghana-National
-hudson.build.number=<please-enter-hudson-build-number>
+hudson.build.number=1018
 hudson.release.version=1.0-SNAPSHOT
 
 nexus.server=nexus.motechproject.org
@@ -35,5 +40,4 @@ nexus.port=80
 nexus.release.version=<please-enter-nexus-release-number>
 
 local.war.file=ghana-national.war
-
 
