balaji: mysql server to have ipaddress

--- a/properties/qa/deploy.properties
+++ b/properties/qa/deploy.properties
@@ -9,7 +9,7 @@ couchdb.port=5984
 couchdb.national.db=ghana-national
 couchdb.seed.main.class=org.motechproject.ghana.national.tools.seed.SetupSeedData
 
-mysql.server=localhost
+mysql.server=10.10.13.52
 mysql.port=3306
 mysql.db.name=motechquartz
 mysql.user=root
