--- a/properties/qa/deploy.properties
+++ b/properties/qa/deploy.properties
@@ -4,12 +4,12 @@ app.context.root=/${app.name}
 download.dir=${basedir}/artifacts
 downloaded.war=${download.dir}/ghana-national-web.war
 
-couchdb.server=localhost
+couchdb.server=127.0.0.1
 couchdb.port=5984
 couchdb.national.db=ghana-national
 couchdb.seed.main.class=org.motechproject.ghana.national.tools.seed.SetupSeedData
 
-mysql.server=10.10.13.52
+mysql.server=127.0.0.1
 mysql.port=3306
 mysql.db.name=motechquartz
 mysql.user=root
@@ -22,7 +22,7 @@ mysql.openmrs.password=password
 
 tomcat.home=/root/apache-tomcat-7.0.22
 tomcat.port=8080
-tomcat.url=http://localhost:${tomcat.port}
+tomcat.url=http://10.10.13.52:${tomcat.port}
 
 tomcat.user=tomcat
 tomcat.password=tomcat
