removing all unwanted files for now and keeping only the files that are needed

--- a/properties/qa/deploy.properties
+++ b/properties/qa/deploy.properties
@@ -20,24 +20,19 @@ mysql.openmrs.user=openmrs
 mysql.openmrs.password=password
 
 
-tomcat.home=/root/apache-tomcat-7.0.22
+tomcat.home=/root/apache-tomcat-6.0.33
 tomcat.port=8080
-tomcat.url=http://10.10.13.52:${tomcat.port}
+tomcat.url=http://localhost:${tomcat.port}
 
 tomcat.user=tomcat
 tomcat.password=tomcat
-tomcat.qa.host=10.10.13.52
+tomcat.qa.host=localhost
 tomcat.qa.manager.url=http://${tomcat.qa.host}:${tomcat.port}/manager/text
 
-hudson.server=10.10.13.42
-hudson.port=8080
+hudson.server=ci.motechproject.org
+hudson.port=80
 hudson.job.name=Ghana-National
-hudson.build.number=1018
 hudson.release.version=1.0-SNAPSHOT
 
-nexus.server=nexus.motechproject.org
-nexus.port=80
-nexus.release.version=<please-enter-nexus-release-number>
-
-local.war.file=ghana-national.war
-
+github.user=openbala
+github.password=bala@tw123
