aus/balaji|fixing load.seed.data task

--- a/build.xml
+++ b/build.xml
@@ -118,10 +118,12 @@
     </target>
 
     <target name="load.seed.data">
+        <get dest="${download.dir}/ghana-national-tools-1.0-SNAPSHOT.jar"
+             src="http://nexus.motechproject.org/content/repositories/snapshots/org/motechproject/ghana-national-tools/1.0-SNAPSHOT/ghana-national-tools-1.0-SNAPSHOT.jar"/>
         <path id="lib.path">
             <fileset dir="${tomcat.home}/webapps/${app.name}/WEB-INF/lib" includes="**/*.jar"/>
             <fileset dir="${tomcat.home}/lib" includes="**/*.jar"/>
-            <fileset dir="${tomcat.home}/webapps/examples/WEB-INF/lib/" includes="**/*.jar"/>
+            <fileset dir="${download.dir}" includes="**/*.jar"/>
         </path>
         <echo message="please wait ..."/>
         <java fork="false" classname="${couchdb.seed.main.class}">
