--- a/build.xml
+++ b/build.xml
@@ -120,15 +120,20 @@
     <target name="load.seed.data">
         <get dest="${download.dir}/ghana-national-tools-1.0-SNAPSHOT.jar"
              src="http://nexus.motechproject.org/content/repositories/snapshots/org/motechproject/ghana-national-tools/1.0-SNAPSHOT/ghana-national-tools-1.0-SNAPSHOT.jar"/>
+        <unzip dest="${download.dir}">
+            <fileset dir="${download.dir}">
+                <include name="ghana-national-tools-1.0-SNAPSHOT.jar" />
+            </fileset>
+        </unzip>
         <path id="lib.path">
             <fileset dir="${tomcat.home}/webapps/${app.name}/WEB-INF/lib" includes="**/*.jar"/>
             <fileset dir="${tomcat.home}/lib" includes="**/*.jar"/>
-            <fileset dir="${download.dir}" includes="**/*.jar"/>
         </path>
         <echo message="please wait ..."/>
         <java fork="false" classname="${couchdb.seed.main.class}">
             <classpath>
                 <path location="${tomcat.home}/webapps/${app.name}/WEB-INF/classes"/>
+                <path location="${download.dir}"/>
                 <path refid="lib.path"/>
             </classpath>
         </java>
