--- a/build.xml
+++ b/build.xml
@@ -174,6 +174,23 @@
         <echo message="seed data loaded into ${couchdb.national.db} database"/>
     </target>
 
+    <target name="load.seed.data">
+        <path id="lib.path">
+            <fileset dir="${tomcat.home}/webapps/${app.name}/WEB-INF/lib" includes="**/*.jar"/>
+            <fileset dir="${tomcat.home}/lib" includes="**/*.jar"/>
+        </path>
+        <echo message="please wait ..."/>
+        <java fork="false" classname="${migration.main.class}">
+            <classpath>
+                <path location="${tomcat.home}/webapps/${app.name}/WEB-INF/classes"/>
+                <path location="${download.dir}"/>
+                <path refid="lib.path"/>
+            </classpath>
+        </java>
+        <echo message="seed data loaded into ${couchdb.national.db} database"/>
+    </target>
+
+
     <target name="deploy.idgen.omod">
 	    <mkdir dir="${download.dir}"/>
         <get dest="${download.dir}/idgen-omod.omod" src="http://nexus.motechproject.org/content/repositories/snapshots/org/motechproject/idgen-omod/1.0-SNAPSHOT/idgen-omod-1.0-SNAPSHOT.jar"/>
