Making the dropping of database failsafe

--- a/build.xml
+++ b/build.xml
@@ -143,7 +143,7 @@
              userid="${mysql.user}"
              classpathref="dependencies"
              password="${mysql.password}">
-            drop database ${mysql.openmrs.db.name};
+            drop database if exists ${mysql.openmrs.db.name};
             create database ${mysql.openmrs.db.name} default charset utf8;
             grant all on ${mysql.openmrs.db.name}.* to '${mysql.openmrs.user}'@'localhost' identified by
             '${mysql.openmrs.password}';
